# DnD_Miso_UI

./: Makefile  README.md  Rakefile.rb  Todo.md  app.cabal  cabal.project
.github/workflows/: main.yml
app/: Main.hs
app/Common/: Banner.hs  Metadata.hs  Pages.hs  Structure.hs  SvgImages.hs
app/Components/: Backgrounds.hs  Counter.hs  Home.hs  Insults.hs  Main.hs  Spells.hs
app/Components/Backgrounds/: Model.hs
app/Model/: BackgroundModel.hs  InsultsModel.hs  MailboxMessage.hs  SpellsModel.hs
static/: index.html  index.js
static/assets/: index.css
static/data/: backgrounds.json  insults.json  species.json  spells.json
