cabal-version:      3.0
name:               app
version:            0.1.0.0
synopsis:           A DND tool
license:            BSD-3-Clause
license-file:       LICENSE
author:             scott.sedgwick
maintainer:         scottDOTsedgwickATgmailDOTcom
category:           Web
build-type:         Simple

flag interactive
  default: False
  manual:  True

common warnings
  ghc-options: -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common options
  if arch(wasm32)
    ghc-options: -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options: -DWASM
    if flag (interactive)
      cpp-options: -DINTERACTIVE

  if arch(javascript)
     ld-options: -sEXPORTED_RUNTIME_METHODS=HEAP8

executable app
  import:           options, warnings
  main-is:          Main.hs
  other-modules:    Common.Banner
                  , Common.Metadata
                  , Common.Pages
                  , Common.SvgImages
                  , Common.Structure
                  , Components.Backgrounds
                  , Components.Counter
                  , Components.Home
                  , Components.Main
                  , Components.Spells
                  , Model.BackgroundModel
                  , Model.MailboxMessage
                  , Model.SpellsModel
  build-depends:    base < 5
                  , containers
                  , data-default
                  , miso >= 1.9
                  , miso-ui
                  , text
  hs-source-dirs:   app
  default-language: Haskell2010
